# sharework_knowledge_msgs

./: .gitignore  CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
msg/: KnowledgeRDFResource.msg  KnowledgeRDFTriple.msg
srv/: KnowledgeAPIEndPoint.srv  KnowledgeRDFTripleEndPoint.srv  KnowledgeRDFUpdatePoint.srv
